# axonyx-ui

./: .gitignore  Axonyx.package.toml  Cargo.toml  README.md  build.rs  package.json
docs/: industrial-ui-notes.md  react-ax-adapter-map.md
scripts/: build.mjs
src/: lib.rs  showroom.ax
src/components/: button.css
src/css/: accordion.css  alert.css  avatar.css  badge.css  breadcrumbs.css  button-group.css  button.css  card.css  chip.css  choice.css  cluster.css  code-block.css  command.css  component-preview.css  copy.css  data.css  dialog.css  divider.css  dropdown.css  field.css  form.css  icons.css  index.css  layout.css  links.css  list.css  machine-switch.css  menu.css  modal.css  nav.css  overlay.css  pagination.css  primitives.css  props-table.css  radio.css  rating.css  section.css  select.css  slider.css  stack.css  (+12 more)
src/foundry/: Accordion.ax  AccordionItem.ax  Alert.ax  AppShell.ax  Avatar.ax  AxHead.ax  AxMasthead.ax  AxSidebar.ax  Badge.ax  Bleed.ax  Box.ax  BreadcrumbCurrent.ax  BreadcrumbItem.ax  Breadcrumbs.ax  Button.ax  ButtonGroup.ax  Card.ax  Center.ax  Checkbox.ax  Chip.ax  Cluster.ax  CodeBlock.ax  Command.ax  CommandList.ax  ComponentPreview.ax  Container.ax  Copy.ax  Dialog.ax  Divider.ax  DocsCodeBlock.ax  DocsSection.ax  Drawer.ax  DropdownItem.ax  DropdownLabel.ax  DropdownMenu.ax  DropdownSeparator.ax  EmptyState.ax  FeatureSection.ax  Field.ax  FieldError.ax  (+66 more)
src/js/: code-copy.js  command.js  dialog.js  drawer.js  index.js  tabs.js
src/showroom/: index.html
src/tokens/: alias.css  brand.css  bronze.css  gold.css  silver.css
(+11 files in other folders)
