[package]
name = "axonyx-ui"
version = "0.0.40"
edition = "2021"
description = "Foundry CSS, JavaScript helpers, and Axonyx-native .ax components for Axonyx UI."
license = "MIT"
homepage = "https://axonyx.dev"
repository = "https://github.com/vladanPro/axonyx-ui"
keywords = ["axonyx", "ui", "css", "design-system", "foundry"]
categories = ["web-programming", "template-engine"]
include = [
  "Axonyx.package.toml",
  "build.rs",
  "src/lib.rs",
  "src/css/**",
  "src/js/**",
  "src/foundry/**",
  "README.md",
  "package.json",
]

[lib]
path = "src/lib.rs"
